--- a/index.css
+++ b/index.css
@@ -319,9 +319,9 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 55px; }
+    font-size: 5px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    background: url(bmc.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
