--- a/index.css
+++ b/index.css
@@ -330,7 +330,7 @@ font-size: 0px; }
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
-    background: url(beetlejuice); }
+    background: url(beetlejuice.jpg); }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
     background: url(w.jpeg); }
