--- a/index.css
+++ b/index.css
@@ -326,7 +326,7 @@ hr {
 font-size: 0px; }
 
   .tile.tile-4 .tile-inner {
-    background: url(mean girls.jpeg);
+    background: url('mean girls.jpeg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
@@ -342,7 +342,7 @@ font-size: 0px; }
     background: url(newsies.jpeg); }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
-    background: url(dear evan hansen.jpeg);
+    background: url('dear evan hansen.jpeg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
