--- a/index.css
+++ b/index.css
@@ -325,8 +325,9 @@ hr {
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
 font-size: 0px; }
   .tile.tile-4 .tile-inner {
-    background: url(bmc.jpg);
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    background: url('mean girls.jpeg');
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+font-size: 80px; }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
     background: url(beetlejuice.jpg); }
