--- a/index.css
+++ b/index.css
@@ -349,9 +349,9 @@ font-size: 0px;}
     background: url('dear evan hansen.jpeg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 0px; }
-    @media screen and (max-width: 520px) {
+    /*@media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
-        font-size: 0px; } }
+        font-size: 0px; } }*/
   .tile.tile-256 .tile-inner {
     color: #f9f6f2;
     background: url(hamilton.jpeg);
