--- a/index.css
+++ b/index.css
@@ -752,7 +752,7 @@ font-size: 0px;}
       text-decoration: underline; }
 
 body {
-  margin: 30px 0;
+  margin: 30px 10px;
   margin-top: 0px;
   margin-bottom: 0px;
   padding-top: 15px;
